--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,11 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"outDir": "package/dist",
-		"declarationDir": "package/types",
+		"outDir": "/dist",
+		"declarationDir": "dist/types",
 		"declaration": true,
 		"emitDeclarationOnly": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["package/dist/**/*"]
+	"exclude": ["dist/**/*"]
 }
