--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"outDir": "/dist",
-		"declarationDir": "dist/types",
+		"declarationDir": "./types",
 		"declaration": true,
 		"emitDeclarationOnly": true
 	},
